# AirsimWrapperFor2020Drone

./: README.md
airsim_client/: CMakeLists.txt  package.xml
airsim_client/include/: airsim_ros_client.h  simple_trajectory.h
airsim_client/launch/: sensor_controller_cheat.launch
airsim_client/src/: airsim_client_node.cpp  airsim_ros_client.cpp  cheat_node.cpp  controller_node.cpp  image_listener_node.cpp  simple_trajectory.cpp  simple_trajectory_node.cpp
